# reelay

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  README.md  buildwheels.sh  mkdocs.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: apps.yml  benchmark.yml  candidate.yml  ccpp.yml  cdevel.yml  containers-retention.yml  containers.yml  cryjson.yml  docs.yml  library.yml  publish.yml  python.yml  tests.yml  wheels.yml
antlr4/grammar/: TemporalLogic.g4
apps/: CMakeLists.txt  README.md
apps/csvparser/: basic.cpp  fast.cpp  modern.cpp
apps/mtl/: main.cpp  rymtl.cpp
apps/mtl/examples/: 1.csv  2.csv  Q2.csv
apps/rybinx/: CMakeLists.txt  main.cpp
apps/ryjavu/: main.cpp
apps/ryjavu/examples/: access_10k.csv  log-5k.csv
apps/ryjson1/: CMakeLists.txt  main.cpp  simdjson_adapter.hpp
apps/rymtl/: main.cpp
apps/rystl/: main.cpp
apps/stl/: main.cpp
apps/stl/examples/: signal.csv
apps/utils/: csvparser_modern.hpp  csvstream.hpp
benchmarks/: rybinx-benchmark.sh  ryjson-benchmark.sh  ryjson-python-benchmark.sh
cmake/: install.cmake  reelayConfig.cmake.in
containers/devel/: Dockerfile
containers/release/: Dockerfile
containers/ryjson/: Dockerfile  entrypoint.sh
containers/scripts/: boost-source-cmake-install.sh
docker/: Dockerfile
docker/benchmark/: Dockerfile  entrypoint.sh
docker/benchmark/benchmarks/: aerial.tsc.sh  dejavu.djv.sh  hello.sh  monpoly.tsc.sh  reelay.djv.sh  reelay.tsc.sh
docker/benchmark/utils/: djv_reelay.py  tsc_monpoly.py  tsc_montre.py
docker/devel/: Dockerfile
docker/ryjson/: Dockerfile  entrypoint.sh
docs/: author.md  behaviors.md  containers.md  docker.md  gs_cli.md  gs_cpp.md  gs_intro.md  gs_python.md  index.md  install.md  license.md  literature.md  motivation.md  naming.md  past_temporal_logic.md  performance.md  python_api.md  requirements.txt  rye.md  specification.md
include/reelay/: builders.hpp  common.hpp  constants.hpp  conversions.hpp  datafield.hpp  interval_set.hpp  intervals.hpp  json.hpp  lexical_cast.hpp  monitors.hpp  networks.hpp  options.hpp  predefined.hpp  pybind11.hpp  pydict.hpp  recipes.hpp  settings.hpp  timestamp.hpp  unordered_data.hpp  version.hpp
include/reelay/formatters/: formatter.hpp  json_formatter.hpp  python_formatter.hpp
include/reelay/json_monitors/: base_json_monitor.hpp  discrete_timed_data_json_monitor.hpp  discrete_timed_json_monitor.hpp  formatter_dense_timed.hpp  untimed_data_json_monitor.hpp  untimed_json_monitor.hpp
include/reelay/monitors/: abstract_monitor.hpp  base_monitor.hpp  condensing_json_monitor.hpp  condensing_robustness_json_monitor.hpp  dense_timed_data_monitor.hpp  dense_timed_json_monitor.hpp  dense_timed_monitor.hpp  dense_timed_robustness_0_monitor.hpp  dense_timed_robustness_json_monitor.hpp  discrete_timed_data_monitor.hpp  discrete_timed_json_monitor.hpp  discrete_timed_monitor.hpp  discrete_timed_robustness_json_monitor.hpp  discrete_timed_robustness_monitor.hpp  monitor.hpp  public_interface.hpp
include/reelay/networks/: basic_structure.hpp  dense_timed_data_network.hpp  dense_timed_network.hpp  dense_timed_robustness_0_network.hpp  discrete_timed_data_network.hpp  discrete_timed_network.hpp  discrete_timed_robustness_network.hpp  untimed_network.hpp
python/: MANIFEST.in  README.md  setup.py
python/examples/: dense_timed_past_mtl_example.py  dense_timed_past_stl_example.py  discrete_timed_past_mtl_example.py  discrete_timed_past_stl_example.py  discrete_timed_past_stl_robustness_example.py  past_ltl_example.py  untimed_past_qtl_dict_example.py  untimed_past_qtl_list_example.py
python/reelay/: __init__.py  app.py  dense_timed_monitor.py  discrete_timed_monitor.py  monitors.py  past_ltl.py  past_mtl.py  past_qtl.py  past_stl.py
python/src/: main.cpp  recipes.hpp
python/tests/: dense_prop_const_float64.test.py  discrete_prop_condensing.test.py  discrete_robust_condensing.test.py  test_dense_categ_const_float64.py  test_dense_categ_const_int64.py  test_dense_prop_const_float64.py  test_dense_prop_const_int64.py  test_dense_prop_linear_float64.py  test_dense_robust_const_float64.py  test_dense_robust_const_int64.py  test_discrete_categ.py  test_discrete_categ_condensing.py  test_discrete_prop.py  test_discrete_prop_condensing.py  test_discrete_robust.py  test_discrete_robust_condensing.py  test_integration_dense_timed_past_mtl.py  test_integration_dense_timed_past_qtl_dict.py  test_integration_dense_timed_past_qtl_list.py  test_integration_dense_timed_past_stl.py  test_integration_dense_timed_past_stl_robustness.py  test_integration_discrete_timed_past_mtl.py  test_integration_discrete_timed_past_qtl_dict.py  test_integration_discrete_timed_past_qtl_list.py  test_integration_discrete_timed_past_stl.py  test_integration_discrete_timed_past_stl_robustness.py  test_integration_past_ltl.py  test_integration_untimed_past_qtl_dict.py  test_integration_untimed_past_qtl_list.py  test_past_ltl.py  test_unit_past_ltl.py
src/: CMakeLists.txt
src/pybind11/: CMakeLists.txt  main.cpp
src/pybind11/cmake/: QueryPythonForPybind11.cmake
test/: test_json_monitors.cpp  test_main.cpp  test_monitors.cpp  test_setting_dense_timed.cpp  test_setting_dense_timed_data.cpp  test_setting_dense_timed_robustness_0.cpp  test_setting_discrete_timed.cpp  test_setting_discrete_timed_data.cpp  test_setting_discrete_timed_robustness.cpp  test_setting_untimed.cpp  test_setting_untimed_data.cpp  test_setting_untimed_robustness.cpp
test/dejavu/: access.txt  fifo-rewritten.txt  fifo.txt.old  file.txt  locks-basic.txt  locks-cycles.txt  locks-datarace.txt
tests/: CMakeLists.txt
tests/src/: dense_timed.test.cpp  dense_timed_data.test.cpp  dense_timed_robustness_0.test.cpp  discrete_timed.test.cpp  discrete_timed_data.test.cpp  discrete_timed_robustness.test.cpp  monitors.test.cpp
tutorial/: dow_module_testing.cpp  dow_module_testing.py
utils/: README.md
(+604 files in other folders)
